...

  Scaffold(
      modifier = Modifier.testTag("editNoteScreen"),
      topBar = {
        ScreenTopBar(
            title = "Edit note",
            titleTestTag = "editNoteTitle",
            onBackClick = {
              // Unselects the note and navigates back to the previous screen
              noteViewModel.selectedNote(null)
              navigationActions.goBack()
            },
            icon = {
              Icon(
                  imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
                  contentDescription = "Back",
                  tint = MaterialTheme.colorScheme.onSurface)
            },
            iconTestTag = "goBackButton")
      }) { paddingValues ->
        if (currentUser == null) {
          ErrorScreen("User not found. Please sign out then in again.")
        } else if (note == null) {
          ErrorScreen("No note is selected to edit")
        } else {
...
              horizontalAlignment = Alignment.CenterHorizontally) {
                NoteDataTextField(
                    value = noteTitle,
                    onValueChange = { noteTitle = Note.formatTitle(it) },
                    label = "Note Title",
                    placeholder = "Enter the new title here",
                    modifier = Modifier.fillMaxWidth().testTag("EditTitle textField"),
                    trailingIcon = {
                      IconButton(onClick = { noteTitle = "" }) {
                        Icon(Icons.Outlined.Clear, contentDescription = "Clear Title")
                      }
                    })

                OptionDropDownMenu(
                    value = visibility?.toReadableString() ?: Visibility.DEFAULT.toReadableString(),
                    expanded = expandedVisibility,
                    buttonTag = "visibilityEditButton",
                    menuTag = "visibilityEditMenu",
                    onExpandedChange = { expandedVisibility = it },
                    items = Visibility.READABLE_STRINGS,
                    onItemClick = { visibility = Visibility.fromReadableString(it) })

                NoteDataTextField(
                    value = courseName,
...
                Button(
                    colors =
                        ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.primary,
                            contentColor = MaterialTheme.colorScheme.onPrimary),
                    onClick = { navigationActions.navigateTo(Screen.EDIT_MARKDOWN) },
                    modifier = Modifier.testTag("Edit Markdown button")) {
                      Text("Edit Markdown")
                    }

                SaveButton(
                    noteTitle = noteTitle,
                    note = note!!,
...
        }
      },
      colors =
          ButtonDefaults.buttonColors(
              containerColor = MaterialTheme.colorScheme.primary,
              contentColor = MaterialTheme.colorScheme.onPrimary),
      modifier = Modifier.testTag("Save button")) {
        Text("Update note")
      }
}

/**
 * Displays a button that deletes the note. When clicked, the button deletes the note from the
...
      border = BorderStroke(1.dp, MaterialTheme.colorScheme.error),
      onClick = {
        noteViewModel.deleteNoteById(note.id, note.userId)
        noteViewModel.selectedNote(null)
        navigationActions.navigateTo(Screen.OVERVIEW)
      },
      modifier = Modifier.testTag("Delete button")) {
        Text("Delete note")
      }
}

/**
 * Displays a button that adds a new comment to the note. When clicked, the button adds a new
...
              contentColor = MaterialTheme.colorScheme.onPrimary),
      onClick = {
        onCommentsChange(
            updatedComments.addCommentByUser(currentUser.uid, currentUser.userName, ""))
        updateNoteComment()
      },
      modifier = Modifier.testTag("Add Comment Button")) {
        Text("Add Comment")
      }
}

/**
 * Displays the comments section of the edit note screen. The section includes a list of comments
...
    updateNoteComment: () -> Unit
) {
  if (updatedComments.commentsList.isEmpty()) {
    Text(
        text = "No comments yet. Add a comment to start the discussion.",
        color = Color.Gray,
        modifier = Modifier.padding(8.dp).testTag("NoCommentsText"))
  } else {
    updatedComments.commentsList.forEachIndexed { _, comment ->
      Row(
          modifier = Modifier.fillMaxWidth().padding(vertical = 4.dp),
          verticalAlignment = Alignment.CenterVertically) {
            OutlinedTextField(
...
                      } else {
                        "${comment.userName} edited: $formattedDate"
                      }
                  Text(displayedText)
                },
                placeholder = { Text("Enter comment here") },
                modifier = Modifier.weight(1f).testTag("EditCommentTextField"))

            IconButton(
                onClick = {
                  onCommentsChange(updatedComments.deleteCommentByCommentId(comment.commentId))
                  updateNoteComment()
                },
                modifier = Modifier.testTag("DeleteCommentButton")) {
                  Icon(
                      imageVector = Icons.Default.Delete,
                      contentDescription = "Delete Comment",
                      tint = Color.Red)
                }
          }
...
